Ajustes en los estilos

--- a/static/html/404page.html
+++ b/static/html/404page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style type="text/css" href="../css/404page.css"></style>
-    <link href="../css/404page.css" rel="stylesheet" type="text/css">
+    <style type="text/css" href="../css/styles.css"></style>
+    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <title>I'm sorry</title>
   </head>
@@ -13,7 +13,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 align-self-center">
+          <div class="col-md-6 align-self-center svg-container">
             <svg
               version="1.1"
               xmlns="http://www.w3.org/2000/svg"
@@ -710,17 +710,24 @@
               </g>
             </svg>
           </div>
-          <div class="col-md-6 align-self-center">
+          <div class="col-md-6 align-self-center text-container">
             <h1>404</h1>
             <h2>UH OH! I'm sorry, we lost this page :(</h2>
             <p>
-              The page you are looking for is in trouble. We are working for repair this. But you can click the button below to go back to my portfolio.
+              The page you are looking for is in trouble. We are working for
+              repair this. But you can click the button below to go back to my
+              portfolio.
             </p>
-            <a href="https://www.jeffrm.com.co" target="_blank" class="btn green">Portfolio</a>
+            <a
+              href="https://www.jeffrm.com.co"
+              target="_blank"
+              class="btn green"
+              >Portfolio</a
+            >
           </div>
         </div>
       </div>
     </main>
-    <script src="../js/page404.js"></script>
   </body>
+  <script src="../js/page404.js"></script>
 </html>
