--- a/404page.html
+++ b/404page.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style type="text/css" href="../css/styles.css"></style>
-    <link href="../css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="../static/css/styles.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <title>I'm sorry</title>
   </head>
@@ -729,5 +728,5 @@
       </div>
     </main>
   </body>
-  <script src="../js/page404.js"></script>
+  <script src="../static/js/page404.js"></script>
 </html>
