--- a/index.html
+++ b/index.html
@@ -711,9 +711,9 @@
           </div>
           <div class="col-md-6 align-self-center text-container">
             <h1>404</h1>
-            <h2>UH OH! I'm sorry, we lost this page :(</h2>
+            <h2>UH OH! I'm sorry, I lost this page :(</h2>
             <p>
-              The page you are looking for is in trouble. We are working for
+              The page you are looking for is in trouble. I am working hard for
               repair this. But you can click the button below to go back to my
               portfolio.
             </p>
